tests/ui/errors/return_expression.stderr
error: invalid value: expected bracket, block or literal
 --> tests/ui/errors/return_expression.rs:6:19
  |
6 |         div class=;
  |                   ^
